# QueenBeeAcoustics

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  Kaggle_QueenBee_Makueni.ipynb  LICENSE  MakueniBeekeepData.ipynb  Queen_Bee_detection_using_CNN.ipynb  README.md  docker-compose.yml  makueni_weather_2018_2025.csv  pyproject.toml  requirements.txt
app/: __init__.py  main.py  wards.py
artifacts/figures/: acoustic_auc_summary.json  acoustic_classification_report.txt  acoustic_metrics_table.csv  sequence_cnn_metrics.json  tabular_hgb_classification_report.csv  tabular_hgb_classification_report.txt  tabular_hgb_metrics.json
docs/: acoustic_calibration.md  acoustic_pipeline.md  makueni_data_fusion.md  sequence_model.md  system_integration.md
kaggle_exports/beeunity/content/main-data/: makueni_climate_features.csv  makueni_climate_occupancy_forecast.csv  (+6 more)
kaggle_exports/beeunity/figures/: acoustic_auc_summary.json  acoustic_classification_report.txt  acoustic_metrics_table.csv  climate_occupancy_metrics.json  climate_yield_metrics.json  sequence_cnn_classification_report.txt  tabular_hgb_classification_report.csv  tabular_hgb_classification_report.txt  tabular_hgb_metrics.json  yield_regression_metrics.json
models/: queenbee_final_tuned_model.keras
queenbee/: README.md  package-lock.json  package.json
queenbee/app/: layout.tsx  page.tsx
queenbee_tuner/cnn_multiclass/: oracle.json
queenbee_tuner/cnn_multiclass/trial_0/: checkpoint.weights.h5  trial.json
scripts/: generate_report_markdown.py  merge_hive_acoustic.py  train_unified_model.py
